testdata/baselines/reference/submodule/compiler/jsFileCompilationReturnTypeSyntaxOfFunction.errors.txt
a.js(1,14): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (1 errors) ====
    function F(): number { }
                 ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.